--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,6 @@
       <meta name="description" content="Portfolio" />
       <meta name="viewport" content="width=device-width" />
       <link rel="stylesheet" href="/public/css/main.min.css" type="text/css" media="screen" />
-      <script src="https://unpkg.com/htmx.org@1.9.5"></script>
-      <meta name="htmx-config" content='{"defaultSettleDelay": 0, "scrollBehavior": "auto"}'></meta>
       <title>Portfolio</title>
     </head>
     <body>
@@ -107,19 +105,33 @@
               </ul>
             </div>
             <div id="projects" class="h-screen pb-24 scroll-mt-24 section">
-              <ul hx-boost="true" hx-swap="innerHTML transition:true">
-                <li>
+              <ul class="flex flex-col projects-list">
+                <li class="mb-44">
                     <a class="flex relative group" href="/projects/needs">
                       <div class="flex flex-col relative z-[2] default-transition">
                         <span class="text-sm uppercase tracking-tight text-gruvbox-purple font-medium">Featured</span>
                         <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
                         <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm">
-                          Developed checkout forms and APIs for e-commerce to accept online transactions
+                          Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn
                         </p>
                       </div>
                       <div class="absolute z-[1] translate-x-2/3 rounded-md overflow-hidden">
                         <div class="w-full h-full bg-gruvbox-fg opacity-60 absolute duration-1000 group-hover:opacity-0"></div>
-                        <img src="/public/images/needs/presentation.png" class="max-w-full full-embed" />
+                        <img src="/public/images/needs/presentation.png" class="max-w-full" />
+                      </div>
+                    </a>
+                  </li><li class="mb-44">
+                    <a class="flex relative group" href="/projects/meitao">
+                      <div class="flex flex-col relative z-[2] default-transition">
+                        <span class="text-sm uppercase tracking-tight text-gruvbox-purple font-medium">Featured</span>
+                        <strong class="text-3xl font-semibold text-gruvbox-black">Meitao</strong>
+                        <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm">
+                          E-Commerce website integrated with local payment processing providers
+                        </p>
+                      </div>
+                      <div class="absolute z-[1] translate-x-2/3 rounded-md overflow-hidden">
+                        <div class="w-full h-full bg-gruvbox-fg opacity-60 absolute duration-1000 group-hover:opacity-0"></div>
+                        <img src="/public/images/meitao/thumb.jpeg" class="max-w-full" />
                       </div>
                     </a>
                   </li>
