--- a/static/projects/needs.html
+++ b/static/projects/needs.html
@@ -2,93 +2,92 @@
     <html lang="en" class="bullshit">
       <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="Developed checkout forms and APIs for e-commerce to accept online transactions" />
+        <meta name="description" content="Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn" />
         <meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="/public/css/main.min.css" type="text/css" media="screen" />
         <title>Needs</title>
-        <style>
-          html { scroll-behavior: "auto" }
-        </style>
       </head>
       <body>
         <div class="duration-500 bg-gruvbox-fg min-h-full">
-          <div class="flex space-x-12 px-16">
-            <aside class="sticky top-0 h-full max-w-md w-full flex-shrink-0 py-16 sidebar">
+          <div class="flex flex-col md:flex-row">
+            <aside class="lg:sticky top-0 h-full w-full pt-16 px-6 md:max-w-md lg:pl-16 w-full flex-shrink-0 sidebar">
               <div class="flex flex-col relative default-transition">
-                <span class="text-sm uppercase tracking-tight text-gruvbox-purple">Featured</span>
+                <span class="text-sm uppercase tracking-tight font-medium text-gruvbox-purple">Featured</span>
                 <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
                 <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm">
-                  Developed checkout forms and APIs for e-commerce to accept online transactions
+                  Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn
                 </p>
               </div>
             </aside>
-            <main class="pt-16">
+            <div class="px-6 pt-6 md:pt-16 lg:px-16">
               <img src="/public/images/needs/presentation.png" class="w-full rounded-xl full-embed" />
-            </main>
+            </div>
           </div>
-          <ul class="px-16">
-            <li key=0 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Settings page</div>
-                  <div class="mt-8">
+          <main class="mt-6">
+            <ul class="space-y-6">
+              <li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Settings page</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/thumb.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=1 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Homepage</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Homepage</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_650602355.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=2 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Create posting</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_744815776.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=3 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Privacy</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Privacy</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_903419734.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=4 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Theme preferences</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Theme preferences</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_924628362.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=5 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Homepage menu</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Homepage menu</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_1104690450.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=6 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Billing</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Billing</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_1451174702.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=7 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Public profile</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Public profile</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_1923977961.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=8 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Create account</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create account</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_3201400914.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=9 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Login page</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Login page</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_3239717779.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=10 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Chat</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Chat</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_3441812393.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li><li key=11 class="flex space-x-12">
-                  <div class="sticky top-0 h-full pt-8 max-w-md w-full flex-shrink-0 text-gruvbox-black text-lg tracking-tight">Create posting (2nd step)</div>
-                  <div class="mt-8">
+                </li><li class="flex flex-col md:flex-row">
+                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting (2nd step)</div>
+                  <div class="px-6 lg:px-16">
                     <img src="/public/images/needs/tg_image_3555869238.jpeg" loading="lazy" class="rounded-xl object-cover" />
                   </div>
-              </li>
-          </ul>
+                </li>
+            </ul>
+          </main>
         </div>
       </body>
     <html/>
