--- a/static/projects/meitao.html
+++ b/static/projects/meitao.html
@@ -7,77 +7,76 @@
         <link rel="stylesheet" href="/public/css/main.min.css" type="text/css" media="screen" />
         <title>Meitao</title>
       </head>
-      <body>
-        <div class="duration-500 bg-gruvbox-fg min-h-full">
-          <div class="flex flex-col md:flex-row">
-            <aside class="lg:sticky top-0 h-full w-full pt-16 px-6 md:max-w-md lg:pl-16 w-full flex-shrink-0 sidebar">
-              <div class="flex flex-col relative default-transition">
-                <span class="text-sm uppercase tracking-tight font-medium text-gruvbox-purple">Featured</span>
-                <strong class="text-3xl font-semibold text-gruvbox-black">Meitao</strong>
-                <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm">
-                  E-Commerce website integrated with local payment processing providers
-                </p>
-              </div>
-            </aside>
-            <div class="px-6 pt-6 md:pt-16 lg:px-16">
-              <img src="/public/images/meitao/thumb.jpeg" class="w-full rounded-xl full-embed" />
+      <body class="bg-gruvbox-fg">
+        <div class="flex flex-col md:flex-row">
+          <aside class="lg:sticky top-0 h-full w-full pt-16 px-6 md:max-w-md lg:pl-16 w-full flex-shrink-0">
+            <div class="flex flex-col relative sidebar">
+              <span class="text-sm uppercase tracking-tight font-medium text-gruvbox-purple">Featured</span>
+              <strong class="text-3xl font-semibold text-gruvbox-black">Meitao</strong>
+              <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm">
+                E-Commerce website integrated with local payment processing providers
+              </p>
             </div>
+          </aside>
+          <div class="px-6 pt-6 md:pt-16 lg:px-16">
+            <img src="/public/images/meitao/thumb.jpeg" class="w-full rounded-xl full-embed" />
           </div>
-          <main class="mt-6">
-            <ul class="space-y-6">
-              <li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Settings page</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_675237003.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Homepage</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_690807538.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_1251641797.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_1266323597.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_2259395398.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_2738181830.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_2882574625.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_3482919876.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_3653988789.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li><li class="flex flex-col md:flex-row">
-                  <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">create posting</div>
-                  <div class="px-6 lg:px-16">
-                    <img src="/public/images/meitao/tg_image_3914346227.jpeg" loading="lazy" class="rounded-xl object-cover" />
-                  </div>
-                </li>
-            </ul>
-          </main>
         </div>
+        <main class="mt-6 pb-24">
+          <ul class="space-y-6">
+            <li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">User orders</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_675237003.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Checkout</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_690807538.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Create account</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_1251641797.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Log in</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_1266323597.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Single product</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_2259395398.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Contact page</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_2738181830.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Cart</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_2882574625.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Homepage search</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_3482919876.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Search results</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_3653988789.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li><li class="flex flex-col md:flex-row">
+                <div class="sticky top-0 h-full py-2 px-6 lg:pl-16 md:max-w-md w-full flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-lg tracking-tight">Add address</div>
+                <div class="px-6 lg:px-16">
+                  <img src="/public/images/meitao/tg_image_3914346227.jpeg" loading="lazy" class="rounded-xl object-cover" />
+                </div>
+              </li>
+          </ul>
+        </main>
       </body>
+      <script src="/public/js/main.js" async defer></script>
     <html/>
