--- a/static/projects/needs.html
+++ b/static/projects/needs.html
@@ -10,16 +10,18 @@
       <body class="bg-gruvbox-fg">
         <div class="flex flex-col md:flex-row">
           <aside class="lg:sticky top-0 h-full w-full pt-16 px-6 md:max-w-md lg:pl-16 w-full flex-shrink-0">
-            <div class="flex flex-col relative sidebar">
-              <span class="text-sm uppercase tracking-tight font-medium text-gruvbox-purple">Featured</span>
-              <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
-              <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm">
+            <div class="flex flex-col relative">
+              <div class="flex flex-col project-title">
+                <span class="text-sm uppercase tracking-tight font-medium text-gruvbox-purple">Featured</span>
+                <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
+              </div>
+              <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm description">
                 Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn
               </p>
             </div>
           </aside>
           <div class="px-6 pt-6 md:pt-16 lg:px-16">
-            <img src="/public/images/needs/presentation.png" class="w-full rounded-xl full-embed" />
+            <img src="/public/images/needs/presentation.png" class="w-full rounded-xl object-cover full-embed" />
           </div>
         </div>
         <main class="mt-6 pb-24">
