--- a/static/index.html
+++ b/static/index.html
@@ -123,7 +123,7 @@
               </ul>
             </div>
           </div>
-          <div id="projects" class="min-h-screen pt-16 md:pt-0 space-y-5 scroll-mt-24 section">
+          <div id="projects" class="min-h-screen py-16 md:pt-0 space-y-5 scroll-mt-24 section">
             <div class="sticky top-0 py-3 px-6 lg:pl-16 md:hidden w-full z-10 flex-shrink-0 bg-gruvbox-fg text-gruvbox-black text-sm tracking-tight uppercase font-medium">
               Projects
             </div>
@@ -146,6 +146,16 @@
                     </div>
                     <div>
                       <img src="/public/images/meitao/thumb.jpeg" class="max-w-full rounded-xl contain" />
+                    </div>
+                  </a>
+                </li><li>
+                  <a class="flex flex-col space-y-4 relative group" href="/projects/mohirlar">
+                    <div class="flex flex-col title">
+                      <span class="text-sm uppercase tracking-tight text-gruvbox-purple font-medium">Featured</span>
+                      <strong class="text-3xl font-semibold text-gruvbox-black">Mohirlar</strong>
+                    </div>
+                    <div>
+                      <img src="/public/images/mohirlar/thumb.jpeg" class="max-w-full rounded-xl contain" />
                     </div>
                   </a>
                 </li>
