feat: added useful metatags;

--- a/static/projects/mohirlar.html
+++ b/static/projects/mohirlar.html
@@ -4,6 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="description" content="Job board to connect freelancers with clients" />
         <meta name="viewport" content="width=device-width" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://portfolio.homeless.dev/projects/mohirlar" />
+        <meta property="og:title" content="Mohirlar" />
+        <meta property="og:description" content="Job board to connect freelancers with clients" />
+        <meta property="og:image" content="/public/images/mohirlar/webp/thumb-1200.webp" />
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://portfolio.homeless.dev/projects/mohirlar" />
+        <meta property="twitter:title" content="Mohirlar" />
+        <meta property="twitter:description" content="Job board to connect freelancers with clients" />
+        <meta property="twitter:image" content="/public/images/mohirlar/webp/thumb-1200.webp" />
+
         <link rel="stylesheet" href="/public/css/main.min.css" type="text/css" media="screen" />
         <title>Mohirlar</title>
       </head>
