--- a/static/projects/needs.html
+++ b/static/projects/needs.html
@@ -4,6 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="description" content="Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn" />
         <meta name="viewport" content="width=device-width" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://portfolio.homeless.dev/projects/needs" />
+        <meta property="og:title" content="Needs" />
+        <meta property="og:description" content="Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn" />
+        <meta property="og:image" content="/public/images/needs/webp/presentation-1200.webp" />
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://portfolio.homeless.dev/projects/needs" />
+        <meta property="twitter:title" content="Needs" />
+        <meta property="twitter:description" content="Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn" />
+        <meta property="twitter:image" content="/public/images/needs/webp/presentation-1200.webp" />
+
         <link rel="stylesheet" href="/public/css/main.min.css" type="text/css" media="screen" />
         <title>Needs</title>
       </head>
@@ -23,9 +37,6 @@
           <div class="px-6 pt-6 md:pt-16 lg:px-16">
             <picture>
               <source
-                  type="image/avif"
-                  srcset="/public/images/needs/avif/presentation-400.avif 400w, /public/images/needs/avif/presentation-600.avif 600w, /public/images/needs/avif/presentation-800.avif 800w, /public/images/needs/avif/presentation-1000.avif 1000w, /public/images/needs/avif/presentation-1200.avif 1200w, /public/images/needs/avif/presentation-1600.avif 1600w, /public/images/needs/avif/presentation-2000.avif 2000w, /public/images/needs/avif/presentation-2400.avif 2400w, /public/images/needs/avif/presentation-2800.avif 2800w, /public/images/needs/avif/presentation-3200.avif 3200w, /public/images/needs/avif/presentation-3600.avif 3600w, /public/images/needs/avif/presentation-4000.avif 4000w"
-                  ></source><source
                   type="image/webp"
                   srcset="/public/images/needs/webp/presentation-400.webp 400w, /public/images/needs/webp/presentation-600.webp 600w, /public/images/needs/webp/presentation-800.webp 800w, /public/images/needs/webp/presentation-1000.webp 1000w, /public/images/needs/webp/presentation-1200.webp 1200w, /public/images/needs/webp/presentation-1600.webp 1600w, /public/images/needs/webp/presentation-2000.webp 2000w, /public/images/needs/webp/presentation-2400.webp 2400w, /public/images/needs/webp/presentation-2800.webp 2800w, /public/images/needs/webp/presentation-3200.webp 3200w, /public/images/needs/webp/presentation-3600.webp 3600w, /public/images/needs/webp/presentation-4000.webp 4000w"
                   ></source>
