--- a/static/index.html
+++ b/static/index.html
@@ -2,20 +2,34 @@
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
-      <meta name="description" content="Portfolio" />
+      <meta name="description" content="Building websites that are both beautiful and functional." />
       <meta name="viewport" content="width=device-width" />
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://portfolio.homeless.dev" />
+      <meta property="og:title" content="Avazbek Juraev - Software Engineer" />
+      <meta property="og:description" content="Building websites that are both beautiful and functional." />
+      <meta property="og:image" content="/public/images/homepage.webp" />
+      <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:url" content="https://portfolio.homeless.dev" />
+      <meta property="twitter:title" content="Avazbek Juraev - Software Engineer" />
+      <meta property="twitter:description" content="Building websites that are both beautiful and functional." />
+      <meta property="twitter:image" content="/public/images/homepage.webp" />
+
       <link rel="stylesheet" href="/public/css/main.min.css" type="text/css" media="screen" />
-      <title>Portfolio</title>
+      <title>Avazbek Juraev - Software Engineer</title>
     </head>
     <body class="bg-gruvbox-fg">
       <div class="flex max-w-screen-xl md:px-12 lg:px-24 flex-col md:flex-row md:space-x-12 w-full mx-auto justify-between">
-        <aside class="md:sticky top-0 h-full pt-16 md:py-24">
+        <aside class="md:sticky top-0 h-full pt-16 md:py-24 flex flex-col md:min-h-screen">
           <section class="flex flex-col space-y-2 text-gruvbox-black px-6 md:px-0">
             <h1 class="text-5xl font-semibold duration-500 tracking-tight">Avazbek Juraev</h1>
             <span class="text-xl font-medium duration-500 tracking-tight">Software Engineer</span>
             <p class="duration-500 leading-normal">Building websites that are both beautiful and functional.</p>
           </section>
-          <nav class="mt-20 hidden md:block">
+          <nav class="mt-12 lg:mt-20 hidden md:block">
             <ul class="flex flex-col space-y-2 text-gruvbox-green">
               <li>
                 <a href="#about" class="max-w-fit duration-200 hover:text-gruvbox-green uppercase tracking-widest flex items-center group">
@@ -53,6 +67,22 @@
               </li>
             </ul>
           </nav>
+          <ul class="flex gap-3 mt-4 md:mt-auto py-4 px-6 md:px-0">
+            <li>
+              <a class="text-gruvbox-black block p-2 -m-2 duration-500 hover:text-gruvbox-purple" href="https://github.com/jcbbb">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/></svg>
+              </a>
+            </li>
+            <li>
+              <a class="text-gruvbox-black block p-2 -m-2 duration-500 hover:text-gruvbox-purple" href="https://linkedin.com/in/avazbek-juraev">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77Z"/></svg>              </a>
+            </li>
+            <li>
+              <a class="text-gruvbox-black block p-2 -m-2 duration-500 hover:text-gruvbox-purple" href="https://jcbbb.t.me">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10s10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19c-.14.75-.42 1-.68 1.03c-.58.05-1.02-.38-1.58-.75c-.88-.58-1.38-.94-2.23-1.5c-.99-.65-.35-1.01.22-1.59c.15-.15 2.71-2.48 2.76-2.69a.2.2 0 0 0-.05-.18c-.06-.05-.14-.03-.21-.02c-.09.02-1.49.95-4.22 2.79c-.4.27-.76.41-1.08.4c-.36-.01-1.04-.2-1.55-.37c-.63-.2-1.12-.31-1.08-.66c.02-.18.27-.36.74-.55c2.92-1.27 4.86-2.11 5.83-2.51c2.78-1.16 3.35-1.36 3.73-1.36c.08 0 .27.02.39.12c.1.08.13.19.14.27c-.01.06.01.24 0 .38z"/></svg>
+                </a>
+            </li>
+          </ul>
         </aside>
         <main class="md:max-w-lg text-gruvbox-black">
           <div id="about" class="min-h-screen pt-16 scroll-mt-24 space-y-5 section">
@@ -137,9 +167,6 @@
                     </div>
                     <picture>
                       <source
-                          type="image/avif"
-                          srcset="/public/images/needs/avif/presentation-400.avif 400w, /public/images/needs/avif/presentation-600.avif 600w, /public/images/needs/avif/presentation-800.avif 800w, /public/images/needs/avif/presentation-1000.avif 1000w, /public/images/needs/avif/presentation-1200.avif 1200w, /public/images/needs/avif/presentation-1600.avif 1600w, /public/images/needs/avif/presentation-2000.avif 2000w, /public/images/needs/avif/presentation-2400.avif 2400w, /public/images/needs/avif/presentation-2800.avif 2800w, /public/images/needs/avif/presentation-3200.avif 3200w, /public/images/needs/avif/presentation-3600.avif 3600w, /public/images/needs/avif/presentation-4000.avif 4000w"
-                          ></source><source
                           type="image/webp"
                           srcset="/public/images/needs/webp/presentation-400.webp 400w, /public/images/needs/webp/presentation-600.webp 600w, /public/images/needs/webp/presentation-800.webp 800w, /public/images/needs/webp/presentation-1000.webp 1000w, /public/images/needs/webp/presentation-1200.webp 1200w, /public/images/needs/webp/presentation-1600.webp 1600w, /public/images/needs/webp/presentation-2000.webp 2000w, /public/images/needs/webp/presentation-2400.webp 2400w, /public/images/needs/webp/presentation-2800.webp 2800w, /public/images/needs/webp/presentation-3200.webp 3200w, /public/images/needs/webp/presentation-3600.webp 3600w, /public/images/needs/webp/presentation-4000.webp 4000w"
                           ></source>
