--- a/static/projects/meitao.html
+++ b/static/projects/meitao.html
@@ -4,6 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="description" content="E-Commerce website integrated with local payment processing providers" />
         <meta name="viewport" content="width=device-width" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://portfolio.homeless.dev/projects/meitao" />
+        <meta property="og:title" content="Meitao" />
+        <meta property="og:description" content="E-Commerce website integrated with local payment processing providers" />
+        <meta property="og:image" content="/public/images/meitao/webp/thumb-1200.webp" />
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://portfolio.homeless.dev/projects/meitao" />
+        <meta property="twitter:title" content="Meitao" />
+        <meta property="twitter:description" content="E-Commerce website integrated with local payment processing providers" />
+        <meta property="twitter:image" content="/public/images/meitao/webp/thumb-1200.webp" />
+
         <link rel="stylesheet" href="/public/css/main.min.css" type="text/css" media="screen" />
         <title>Meitao</title>
       </head>
