feat: added new project;

--- a/static/index.html
+++ b/static/index.html
@@ -159,11 +159,14 @@
             </div>
             <ul class="flex flex-col space-y-12 px-6 md:px-0">
               
-                  <li>
-                  <a class="flex flex-col space-y-4 relative group" href="/projects/needs">
+                  <li class="relative flex flex-col space-y-4 group">
+                    <a class="absolute w-full h-full top-0 left-0" href="/projects/needs"></a>
                     <div class="flex flex-col title">
                       <span class="text-sm uppercase tracking-tight text-gruvbox-purple font-medium">Featured</span>
-                      <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
+                      <div class="flex items-center justify-between">
+                        <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
+                        <a href="https://needs.uz" class="duration-300 relative z-10 text-gruvbox-aqua hover:text-gruvbox-green underline">Live</a>
+                      </div>
                     </div>
                     <picture>
                       <source
@@ -172,13 +175,15 @@
                           ></source>
                       <img src="/public/images/needs/presentation.png" class="max-w-wfull rounded-xl contain" loading="lazy" decoding="async" />
                     </picture>
-                  </a>
-                </li>
-                  <li>
-                  <a class="flex flex-col space-y-4 relative group" href="/projects/meitao">
+                  </li>
+                  <li class="relative flex flex-col space-y-4 group">
+                    <a class="absolute w-full h-full top-0 left-0" href="/projects/meitao"></a>
                     <div class="flex flex-col title">
                       <span class="text-sm uppercase tracking-tight text-gruvbox-purple font-medium">Featured</span>
-                      <strong class="text-3xl font-semibold text-gruvbox-black">Meitao</strong>
+                      <div class="flex items-center justify-between">
+                        <strong class="text-3xl font-semibold text-gruvbox-black">Meitao</strong>
+                        <a href="https://meitao.uz" class="duration-300 relative z-10 text-gruvbox-aqua hover:text-gruvbox-green underline">Live</a>
+                      </div>
                     </div>
                     <picture>
                       <source
@@ -190,13 +195,15 @@
                           ></source>
                       <img src="/public/images/meitao/thumb.jpeg" class="max-w-wfull rounded-xl contain" loading="lazy" decoding="async" />
                     </picture>
-                  </a>
-                </li>
-                  <li>
-                  <a class="flex flex-col space-y-4 relative group" href="/projects/mohirlar">
+                  </li>
+                  <li class="relative flex flex-col space-y-4 group">
+                    <a class="absolute w-full h-full top-0 left-0" href="/projects/mohirlar"></a>
                     <div class="flex flex-col title">
                       <span class="text-sm uppercase tracking-tight text-gruvbox-purple font-medium">Featured</span>
-                      <strong class="text-3xl font-semibold text-gruvbox-black">Mohirlar</strong>
+                      <div class="flex items-center justify-between">
+                        <strong class="text-3xl font-semibold text-gruvbox-black">Mohirlar</strong>
+                        <a href="https://mohirlar.uz" class="duration-300 relative z-10 text-gruvbox-aqua hover:text-gruvbox-green underline">Live</a>
+                      </div>
                     </div>
                     <picture>
                       <source
@@ -208,8 +215,24 @@
                           ></source>
                       <img src="/public/images/mohirlar/thumb.jpeg" class="max-w-wfull rounded-xl contain" loading="lazy" decoding="async" />
                     </picture>
-                  </a>
-                </li>
+                  </li>
+                  <li class="relative flex flex-col space-y-4 group">
+                    <a class="absolute w-full h-full top-0 left-0" href="/projects/monkey"></a>
+                    <div class="flex flex-col title">
+                      
+                      <div class="flex items-center justify-between">
+                        <strong class="text-3xl font-semibold text-gruvbox-black">Monkey</strong>
+                        <a href="https://monkey.homeless.dev" class="duration-300 relative z-10 text-gruvbox-aqua hover:text-gruvbox-green underline">Live</a>
+                      </div>
+                    </div>
+                    <picture>
+                      <source
+                          type="image/webp"
+                          srcset="/public/images/monkey/webp/presentation-400.webp 400w, /public/images/monkey/webp/presentation-600.webp 600w, /public/images/monkey/webp/presentation-800.webp 800w, /public/images/monkey/webp/presentation-1000.webp 1000w, /public/images/monkey/webp/presentation-1200.webp 1200w, /public/images/monkey/webp/presentation-1600.webp 1600w"
+                          ></source>
+                      <img src="/public/images/monkey/presentation.png" class="max-w-wfull rounded-xl contain" loading="lazy" decoding="async" />
+                    </picture>
+                  </li>
             </ul>
           </div>
           <div id="contact" class="min-h-screen pt-16 md:pt-0 space-y-5 scroll-mt-24 section">
