--- a/static/projects/needs.html
+++ b/static/projects/needs.html
@@ -27,7 +27,10 @@
             <div class="flex flex-col relative">
               <div class="flex flex-col project-title">
                 <span class="text-sm uppercase tracking-tight font-medium text-gruvbox-purple">Featured</span>
-                <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
+                <div class="flex items-center justify-between">
+                  <strong class="text-3xl font-semibold text-gruvbox-black">Needs</strong>
+                  <a href="https://needs.uz" class="duration-300 relative z-10 text-gruvbox-aqua hover:text-gruvbox-green underline">Live</a>
+                </div>
               </div>
               <p class="p-3 bg-gruvbox-fg-700 text-gruvbox-black rounded-md mt-2 max-w-sm description">
                 Marketplace for people to publish listings (e.g. Ebay/Amazon). It has great performance, app-like navigation with Service Workers and Webauthn
